RESOLVED FIXED30025
Problem editing or selecting text containing ligatures
https://bugs.webkit.org/show_bug.cgi?id=30025
Summary Problem editing or selecting text containing ligatures
Frank Illenberger
Reported 2009-10-02 12:15:45 PDT
Created attachment 40538 [details] Example showing weird editing and selection behavior if ligatures are rendered If the new CSS text-rendering property is set to "geometricPrecision" and ligatures are rendered, it is not possible to edit or select single characters/glyhps.
Attachments
Example showing weird editing and selection behavior if ligatures are rendered (322 bytes, text/html)
2009-10-02 12:15 PDT, Frank Illenberger
no flags
Core Text part of the patch, with test (13.41 KB, patch)
2009-10-23 14:34 PDT, mitz
no flags
Patch with test (15.84 KB, patch)
2009-10-29 14:06 PDT, mitz
sam: review+
Sam Weinig
Comment 1 2009-10-02 12:25:32 PDT
mitz
Comment 2 2009-10-23 14:34:23 PDT
Created attachment 41749 [details] Core Text part of the patch, with test
mitz
Comment 3 2009-10-29 14:06:30 PDT
Created attachment 42142 [details] Patch with test
mitz
Comment 4 2009-10-29 14:29:13 PDT
Note You need to log in before you can comment on or make changes to this bug.