Problem editing or selecting text containing ligatures https://bugs.webkit.org/show_bug.cgi?id=30025

Reviewed by Sam Weinig.

WebCore:

Test: platform/mac/fast/text/ligature-subdivision.html

* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::ComplexTextController): Initialize
m_characterInCurrentGlyph.
(WebCore::ComplexTextController::offsetForPosition): If the hit glyph spans multiple
characters, compute the hit character based on dividing the glyph’s total advance into
a number of equal intervals equal to the number of characters and assigning the hit to the
character corresponding to the hit interval.
(WebCore::ComplexTextController::advance): If the final offset occurs mid-glyph, advance
by a fraction of the glyph’s total advance.
* platform/graphics/mac/ComplexTextController.h: Added m_characterInCurrentGlyph.

LayoutTests:

* platform/mac/fast/text/ligature-subdivision-expected.txt: Added.
* platform/mac/fast/text/ligature-subdivision.html: Added.
* platform/mac/fast/text/script-tests: Added.
* platform/mac/fast/text/script-tests/TEMPLATE.html: Copied from LayoutTests/fast/js/script-tests/TEMPLATE.html.
* platform/mac/fast/text/script-tests/ligature-subdivision.js: Added.



Canonical link: https://commits.webkit.org/41743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50301 268f45cc-cd09-0410-ab3c-d52691b4dbfc