WebCore/platform/graphics/mac/ComplexTextController.h
@@ -144,6 +144,7 @@ private:
     unsigned m_numGlyphsSoFar;
     size_t m_currentRun;
     unsigned m_glyphInCurrentRun;
+    unsigned m_characterInCurrentGlyph;
     float m_finalRoundingWidth;
     float m_padding;
     float m_padPerSpace;
